# agent-redline-python-demo

./: .gitignore  AGENTS.md  README.md  agent-policy.yaml  pyproject.toml
.agent-redline/: suppressions.yaml
.github/workflows/: agent-redline.yml
docs/agent/: blue-zone-work.md  boundary-violation.md  gray-zone-change.md  pr-discipline.md  red-zone-change.md
scripts/: agent-redline-check.sh  agent-redline-report.py  run-import-linter.py
src/orders/: __init__.py
src/orders/api/: orders_router.py
src/orders/application/: place_order.py
src/orders/domain/: order.py
src/orders/domain/repositories/: orders_repository.py
src/orders/infrastructure/db/: in_memory_orders.py
src/orders/infrastructure/email/: stub_sender.py
tests/: test_isolated_helper.py  test_place_order.py
